tests/baselines/reference/ES5For-ofTypeCheck4(target=es2015).errors.txt
ES5For-ofTypeCheck4.ts(2,17): error TS2454: Variable 'union' is used before being assigned.


==== ES5For-ofTypeCheck4.ts (1 errors) ====
    var union: string | string[];
    for (const v of union) { }
                    ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.